# papirus-folders-gui

./: CMakeLists.txt  README.md  Readme.txt  changelog.ui  credits.cpp  credits.ui  filemanager.cpp  filemanager.ui  help.ui  img.qrc  license.h  license.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  papirus.desktop  papirus.ui  secdialog.cpp  secdialog.ui
.github/ISSUE_TEMPLATE/: bug_report.md
Premaked build/: papirus-folders-gui.sh
papirus-folders-gui/: CMakeLists.txt  Makefile  changelog.cpp  changelog.h  changelog.ui  colors.cpp  colors.h  colors.ui  credits.cpp  credits.h  credits.ui  espanish.qm  espanish.ts  extra.cpp  extra.h  extra.ui  filemanager.h  filemanager.ui  french.qm  french.ts  help.cpp  help.h  help.ui  img.qrc  italiano.qm  italiano.ts  license.cpp  license.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_changelog.cpp  moc_colors.cpp  moc_help.cpp  moc_license.cpp  moc_mainwindow.cpp  moc_secdialog.cpp  papirus-folders-GUI.pro  papirus-folders-gui.pro  (+25 more)
premaked-build/: Papirus folders GUI.desktop  papirus-folders-gui
